adding work experience

--- a/resume.tex
+++ b/resume.tex
@@ -82,9 +82,6 @@
 \begin{document}
 \name{Griffin Solimini}
 \tagline{Software Engineer}
-%% You can add multiple photos on the left or right
-\photoR{2.8cm}{Globe_High}
-% \photoL{2.5cm}{Yacht_High,Suitcase_High}
 
 \personalinfo{%
   % Not all of these are required!
@@ -126,32 +123,33 @@
 
 \cvevent{Software Engineer 2}{Microsoft - Xbox Game Pass}{Sept. 2019 -- Present}{Redmond, WA}
 \begin{itemize}
-\item Job description 1
-\item Job description 2
+\item Windows OOBE
+\item EA / Ubisoft / Third Party
+\item Infrastructure
 \end{itemize}
 
 \divider
 
 \cvevent{Software Engineer}{Microsoft - Xbox Game Pass}{Nov. 2018 -- Sept. 2019}{Redmond, WA}
 \begin{itemize}
-\item Job description 1
-\item Job description 2
+\item Worked on a variety of launch critical user facing features for the first version of the Xbox application for PC, as well as features supporting the launch of Game Pass on PC. Integrated an issue filing system, implemented the settings modal view, added game uninstall capabilities, and library drag-and-drop functionality.
+\item Created and owned the subscription page for the Xbox application, the primary source for in-application user acquisition and retention. Implemented the UI, added telemetry/reporting,  
 \end{itemize}
 
 \divider
 
 \cvevent{Program Manager}{Microsoft - Silicon, Graphics, and Media}{Sept. 2017 -- Nov. 2018}{Redmond, WA}
 \begin{itemize}
-\item Job description 1
-\item Job description 2
+\item Co-lead the relationship with Qualcomm, tracking bugs and validating incoming software, and helped manage code flow externally back to Qualcomm. Helped to keep the working relationship efficient and well documented to internal/external partners in order to develop and deliver a high quality product to our vertical teams.
+\item Delivered a specification, cost estimate, and schedule for the Offline Crash Dump feature as part of the Redstone 2 milestone. Offline Crash Dump will provide telemetry for developers to more effectively analyze device failures and successfully debug them.
 \end{itemize}
 
 \divider
 
 \cvevent{Software Developer (Part Time)}{Ohio State University}{Apr. 2015 -- Dec. 2017}{Columbus, OH}
 \begin{itemize}
-\item Job description 1
-\item Job description 2
+\item Developed user facing features and fixed bugs on the "OSU Mobile" application, for both iOS and Android platforms. Focused on "News" and "Events" features. 
+\item Code modernization including updating legacy code from Objective C to Swift.
 \end{itemize}
 
 % use ONLY \newpage if you want to force a page break for
@@ -166,9 +164,8 @@
 
 \cvevent{BS in Computer Science}{Ohio State University}{Aug. 2013 -- May 2017}{}
 \begin{itemize}
-\item 3.93 GPA
+\item 3.93 GPA, Summa Cum Laude with Honors Distinction
 \item Eminence Fellowship \& Full Scholarship
-\item Graduated Summa Cum Laude with Honors Distinction
 \end{itemize}
 
 % \divider
