update summary and projects

--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Projects}
+\cvsection{Personal and Skill Development Projects}
 
 %-------------------------------------------------------------------------------
 %	CONTENT
