--- a/sections/summary.tex
+++ b/sections/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Software Engineer at Xbox. 4+ years experience in the industry with experience in a broad number of areas including frontend experiences, backend development, and application infrastructure. Excited about many problem spaces, but especially interested and passionate about learning more about lower level development, operation systems, and hardware.
+Microsoft Xbox Software Engineer with 4+ years industry experience in a broad range of areas including frontend user experiences, backend development, and application infrastructure. Motivated about problem solving in many spaces, but specifically interested and passionate about growing in the areas of lower level development, operation systems, and hardware.
 \end{cvparagraph}
