--- a/sections/summary.tex
+++ b/sections/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Microsoft Xbox Software Engineer with 4+ years industry experience in a broad range of areas including frontend user experiences, backend development, and application infrastructure. Motivated about problem solving in many spaces, but specifically interested and passionate about growing in the areas of lower level development, operation systems, and hardware.
+Microsoft Xbox Software Engineer with 6 years industry experience in a broad range of areas including frontend user experiences, backend development, and application infrastructure. Motivated about problem solving in many spaces, but specifically interested and passionate about exploring areas of lower level development close to hardware.
 \end{cvparagraph}
