--- a/sections/experience2023.tex
+++ b/sections/experience2023.tex
@@ -17,7 +17,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item{Designed and implemented the Game Catalog Extensions SDK, which included an API for developing out-of-proc WinRT components to be used as extensions to provide management capabilities for third party gaming content seamlessly from the Xbox App. The first partner to integrate, Riot Games, had 267M hours of playtime attributed (with an estimated 1.17M new subscriptions acquired) in the first four months live.} 
-        \item{Manage engineering relationships with Riot Games, EA, and Ubisoft regarding developing extensions for the Xbox App. Currently working with Electronic Arts and Ubisoft to migrate from existing integration mechanisms to the Game Catalog Extensions SDK, to grow engagement hours similarly to Riot Games. } 
+        \item{Managed engineering relationships with Riot Games, EA, and Ubisoft regarding developing extensions for the Xbox App. Currently working with Electronic Arts and Ubisoft to migrate from existing integration mechanisms to the Game Catalog Extensions SDK, to grow engagement hours similarly to Riot Games. } 
         \item{Implemented the frontend and backend of a PC Game Pass subscription surface to be added into the Windows operating system's out-of-box experience, utilizing existing Microsoft infrastructure. The new subscription surface provided a new acquisition pipeline for customers with new PCs.} 
         \item{Made major contributions to the Xbox PC client's infrastructure, leading to improvements in reliability, performance, and developer experience. Tasks included but not limited to: migrating the Xbox PC client to utilize the Hermes JavaScript engine, facilitating React Native Windows upgrades into the application, and onboarding the application to a new application monitoring platform (sentry.io). Improvements and fixes drove up crash-free sessions and increased ability to monitor issues in released versions.}
 	      \item{Shipped numerous user facing features and fixed critical bugs in preparation for the successful launch of the Xbox PC client and PC Game Pass at E3 2019.}	
