--- a/sections/projects2023.tex
+++ b/sections/projects2023.tex
@@ -18,7 +18,7 @@
       \begin{cvitems} % Description
         \item {Building a USB dongle and headphone adapter kit to convert wired studio headphones into a wireless headset for gaming or work.} 
         \item {Prototyping on a pair of RP2040 Pico boards, using I2C and SPI to interface with display and RF modules. Implementing the host-side dongle as a class compliant UAC2.0 device.}
-        \item {Currently working on migrating over to an STM32F411CEU6 to take advantage of its I2S peripherals (for interfacing with a DAC module) and faster Cortex-M4.} 
+        \item {Currently working on migrating over to a STM32F411CEU6 to take advantage of its I2S peripherals (for interfacing with a DAC module) and faster Cortex-M4.} 
       \end{cvitems}
     }
 %---------------------------------------------------------
